test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-apply-except/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - policy.yaml
  - ns.yaml
assert:
  - policy-ready.yaml
  - ns-ready.yaml
