test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-apply-except/99-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl delete -f policy.yaml --force --wait=true --ignore-not-found=true
  - command: kubectl delete -f policyexception.yaml --force --wait=true --ignore-not-found=true
  - command: kubectl delete -f bypass-resource.yaml --force --wait=true --ignore-not-found=true
  - command: kubectl delete -f ns.yaml --force --wait=true --ignore-not-found=true
