test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-apply-except/bypass-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: testing
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
