test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-apply-except/ns-ready.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
status:
  phase: Active
